# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_connector"
version = "1.1.0-rc1"
edition = "2024"
license = "MIT"
description = "Azure IoT Operations Connector"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
azure_iot_operations_protocol = { version = "1.0", path = "../azure_iot_operations_protocol" }
azure_iot_operations_services = { version = "1.1.0-rc1", path = "../azure_iot_operations_services", features = ["state_store", "schema_registry", "azure_device_registry"]  }
azure_iot_operations_mqtt = { version = "1.0", path = "../azure_iot_operations_mqtt" }
chrono.workspace = true
derive_builder.workspace = true
derive-getters.workspace = true
log.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
# tokio.workspace = true
tokio = { version = "1.41", features = ["full"] } # TODO: If I use the workspace version of tokio I run into errors with tokio in the tests, will investigate later
tokio-retry2 = { version = "0.5.7", features = ["jitter"] }
tokio-util.workspace = true

[dev-dependencies]
env_logger.workspace = true
temp-env = { version = "0.3.6", features = ["async_closure"]}
tempfile.workspace = true
test-case.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
