# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_mqtt"
version = "0.11.0"
edition = "2024"
license = "MIT"
description = "MQTT version 5.0 client library providing flexibility for decoupled asynchronous applications"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
azure_mqtt = { git = "https://github.com/Azure/mqtt-client.git", rev = "67a474df878ce97f5558a08da2023d036bff5de7" }
bytes.workspace = true
derive_builder.workspace = true
derive-getters.workspace = true
futures = "0.3.31"
log.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
openssl = "0.10.66"                                                                 # only used with rumqttc to set up TLS settings
rand = "0.8.5"
tempfile = { version = "3", optional = true }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
azure_iot_operations_mqtt = { path = ".", features = ["test-utils"] }
env_logger.workspace = true
temp-env.workspace = true
test-case.workspace = true
tokio-test.workspace = true

[features]
default = [ ]
test-utils = ["azure_mqtt/__integration", "tempfile"]

[lints]
workspace = true
