# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "azure_iot_operations_protocol"
version = "0.12.0"
edition = "2024"
license = "MIT"
description = "Utilities for using the Azure IoT Operations Protocol over MQTT"
repository = "https://github.com/Azure/iot-operations-sdks"
readme = "README.md"
publish = true

[dependencies]
azure_iot_operations_mqtt = { version = "1.0.0-rc1", path = "../azure_iot_operations_mqtt" }
bytes.workspace = true
derive_builder.workspace = true
iso8601-duration = "0.2.0"
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid = { version = "1.8.0", features = ["v4","fast-rng"] }
chrono.workspace = true
regex = "1.11.0"
thiserror.workspace = true
fluent-uri = "0.3.2"

[dev-dependencies]
async-std = "1.12"
async-trait = "0.1.81"
azure_iot_operations_mqtt = { version = "1.0.0-rc1", path = "../azure_iot_operations_mqtt", features = ["test-utils"] }
ctor = "0.2"
datatest-stable = "0.2"
env_logger.workspace = true
futures = "0.3.31"
mockall = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
test-case.workspace = true
tokio-test.workspace = true
toml = "0.8"

[lints]
workspace = true

[[test]]
name = "protocol_tests"
harness = false
