[package]
name = "sample_connector_scaffolding"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_iot_operations_connector = { version = "0.1.0-alpha.4", path = "../azure_iot_operations_connector", registry = "aio-sdks"  }
azure_iot_operations_protocol = { version = "0.10.0-alpha.1", path = "../azure_iot_operations_protocol", registry = "aio-sdks"  }
azure_iot_operations_services = { version = "0.9.0-alpha.3", path = "../azure_iot_operations_services", registry = "aio-sdks", features = ["state_store", "schema_registry", "azure_device_registry"]  }
azure_iot_operations_mqtt = { version = "0.10.0-alpha.1", path = "../azure_iot_operations_mqtt", registry = "aio-sdks"  }
log.workspace = true
tokio = { version = "1.41", features = ["full"] }
tokio-util.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger.workspace = true

[lints]
workspace = true
