[package]
name = "counter_client"
edition = "2024"
publish = false

[dependencies]
envoy = { path = "../envoy"}
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
azure_iot_operations_mqtt = { path = "../../../azure_iot_operations_mqtt" }
azure_iot_operations_protocol = { path = "../../../azure_iot_operations_protocol" }

[lints]
workspace = true
