[package]
name = "counter_server"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
envoy = { path = "../envoy"}
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
azure_iot_operations_mqtt = { path = "../../../azure_iot_operations_mqtt" }
azure_iot_operations_protocol = { path = "../../../azure_iot_operations_protocol" }


[lints]
workspace = true
